# Cpp_project_sgame

./: .gitignore  CMakeLists.txt  README.md  build.bat
game_structure/: structure.md
game_structure/.obsidian/: workspace.json
main/: main.cpp  player.cpp  server.cpp
src/: block.cpp  block.h  common.h  display_symbol.h  language.cpp  language.h  main.cpp  player.cpp  save_package.h  scene.cpp  scene.h  server.cpp  utility.inl
src/ChatClient/: CMakeLists.txt  Client.cpp  Client.h  ClientNetworkManager.cpp  main.cpp  widget.cpp  widget.h  widget.ui
src/ChatClient/include/: Client.h  ClientNetworkManager.h  global.h
src/ChatClient/src/: Client.cpp  ClientNetworkManager.cpp
src/ChatServer/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  ClientWork.cpp  ClientWork.h  TcpServer.cpp  TcpServer.h  main.cpp
src/ChatServer/include/: ChatServer.h  ClientWork.h  TcpServer.h
src/ChatServer/src/: ChatServer.cpp  ClientWork.cpp  TcpServer.cpp
src/GameServer/: CMakeLists.txt  block.cpp  gameclientwork.cpp  gameclientwork.h  gameserver.cpp  gameserver.h  main.cpp  scene.cpp  tcpserver.cpp  tcpserver.h
src/Game_Server/: CMakeLists.txt  Game_handler.cpp  Game_handler.h  block.cpp  clentsocket.cpp  main.cpp  scene.cpp  server.cpp  server.h
src/MyGame/: CMakeLists.txt  Client.cpp  Client.h  ClientNetworkManager.cpp  ClientNetworkManager.h  archives.cpp  archives.h  archives.ui  asklogin.cpp  asklogin.h  asklogin.ui  askregister.cpp  askregister.h  askregister.ui  block.cpp  global.cpp  global.h  language.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player_connect.cpp  player_connect.h  playerclient.cpp  playerclient.h  playernetwork.cpp  playernetwork.h  scene.cpp  scene.h  start_window.cpp  start_window.h  start_window.ui
src/TerminalVersion/: block.h  color.h  common.h  language.cpp  language.h  scene.cpp  scene.h  utility.inl
